fix: use min-width instead of width
When following section contents (e.g. education or certificates) is wider than two times the width of the skill container the skill container will get too much whitespace on the right. Using a min-width will fix the issue.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -254,7 +254,7 @@ li {
   column-gap: 10px; }
   .skills .container .article {
     break-inside: avoid-column;
-    width: 120px;
+    min-width: 120px;
     padding-top: 20px; }
     .skills .container .article span {
       display: block;
